--- a/_config.yml
+++ b/_config.yml
@@ -16,10 +16,10 @@ minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "n
 
 # Site Settings
 locale: "en-US"
-title: "MUSA 550: Geospatial Data Science in Python"
+title: "Exploring Hurricane Vulnerability and Evacuation Center Access in NYC"
 title_separator: "-"
-name: "Nick Hand"
-description: "Displaying cool data visualizations"
+name: "Jenna Epstein"
+description: "Final project for MUSA 550: Geospatial Data Science in Python at UPenn (2021)"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
@@ -105,9 +105,9 @@ analytics:
 
 # Site Author
 author:
-  name: "Nick Hand"
+  name: "Jenna Epstein"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "Director of Finance, Data, and Policy, Philadelphia Controller"
+  bio: "City Planning & Spatial Analysis at Univerity of Pennsylvania"
   location: "Philadelphia"
   email:
   links:
