--- a/_config.yml
+++ b/_config.yml
@@ -107,7 +107,7 @@ analytics:
 author:
   name: "Jenna Epstein"
   avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
-  bio: "City Planning & Spatial Analysis at Univerity of Pennsylvania"
+  bio: "City Planning & Spatial Analysis at University of Pennsylvania"
   location: "Philadelphia"
   email:
   links:
