--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@
 
 # theme                  : "minimal-mistakes-jekyll"
 # remote_theme           : "mmistakes/minimal-mistakes"
-minimal_mistakes_skin: "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin: "mint" # "air", "aqua", "contrast", "dark", "dirt", "neon", "default", "plum", "sunrise"
 
 # Site Settings
 locale: "en-US"
@@ -22,7 +22,7 @@ name: "Jenna Epstein"
 description: "Final project for MUSA 550: Geospatial Data Science in Python at UPenn (2021)"
 url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl: # the subpath of your site, e.g. "/blog"
-repository: # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
+repository: "jennaepstein/MUSA500-finalproject"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo: # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
 masthead_title: # overrides the website title displayed in the masthead, use " " for no title
@@ -80,6 +80,9 @@ google_site_verification:
 bing_site_verification:
 yandex_site_verification:
 naver_site_verification:
+
+## ADDED BY ME
+classes: wide
 
 # Social Sharing
 twitter:
