--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title: "Exploring Hurricane Vulnerability and Evacuation Center Access in NYC"
 title_separator: "-"
 name: "Jenna Epstein"
 description: "Final project for MUSA 550: Geospatial Data Science in Python at UPenn (2021)"
-url: # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url: "https://jennaepstein.github.io/MUSA500-finalproject"
 baseurl: # the subpath of your site, e.g. "/blog"
 repository: "jennaepstein/MUSA500-finalproject"
 teaser: # path of fallback teaser image, e.g. "/assets/images/500x300.png"
