--- a/_config.yml
+++ b/_config.yml
@@ -109,7 +109,7 @@ analytics:
 # Site Author
 author:
   name: "Jenna Epstein"
-  avatar: # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar:  "/assets/images/JennaEpstein_headshot_2021_github.jpg"
   bio: "City Planning & Spatial Analysis at University of Pennsylvania"
   location: "Philadelphia"
   email:
